# QGroundControl

./: CMakeLists.txt  CMakeLists.txt.user.0601b5b  CMakeLists.txt.user.13e41fa  CMakeLists.txt.user.9c1e7e3  CMakeLists.txt.user.ac38721  CMakeLists.txt.user.af5e4d4  CMakeLists.txt.user.d26a224  CMakeLists.txt.user.efc9cc7  qgcimages.qrc
build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  cmake_install.cmake
build-mingw/.lupdate/: QGroundControl_lupdate_project.cmake
build-mingw/.qt/: QGroundControl-plugins.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_qml_app_QGroundControl_2a2e2e6ba5.cmake
build-mingw/qmltypes/: QGroundControl_foreign_types.txt
build-mingw/src/: cmake_install.cmake
build-mingw/test/: CTestTestfile.cmake  cmake_install.cmake
build-mscv/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  cmake_install.cmake  qgroundcontrol_qmltyperegistrations.cpp  qtcsettings.cmake
build-mscv/src/: Makefile  (+1 more)
build-msvc/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  cmake_install.cmake
build-ucrt64/: CMakeCache.txt
src/: pch.h
src/UI/: CMakeLists.txt  MainWindow.qml  SideMenu_AparatQurgusu.qml  SideMenu_Tehlukesizlik.qml  Side_Parameter.qml  Side_Proqram_Teminati.qml  Side_test.qml  TopStatusPanel_GPS.qml  TopStatusPanel_GPS_Settings.qml  topstatuspanel_gps.cpp  topstatuspanel_gps.h
(+4046 files in other folders)
